--- a/circleci/config.yml
+++ b/circleci/config.yml
@@ -1,14 +1,14 @@
 version: 2.1
+
+orbs:
+  win: circleci/windows@4.1.1
+  
 jobs:
-  test:
-    docker:
-      - image: circleci/ruby:2.6.3-stretch-node
+  build:
+    executor: win/server-2022
+    
     steps:
       - checkout
       - run:
           name: echo
           command: echo "Hello, world"
-workflows:
-  test_workflow:
-    jobs:
-      - test
